--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -2,26 +2,35 @@
     background-color: black;
     color: white;
     padding-left: 15px;
-    position: fixed;
     width: 100%;
 }
   
+
 .nav{
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 
 .link{
     color:white;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     margin: 10px;
     font-size: 25px;
 }
 
 .btn{
-    margin-right: 2px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
+
+.btnCar{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
