--- a/src/components/ListaDeComponentes/ListaDeComponentes.css
+++ b/src/components/ListaDeComponentes/ListaDeComponentes.css
@@ -2,3 +2,12 @@
     text-align: center;
     margin-top: 50px;
 }
+
+.Container{
+    padding: 15px;
+    width: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    
+}
